--- a/blog-detail.html
+++ b/blog-detail.html
@@ -2,6 +2,7 @@
     <head>
         <title>Day 4 - Creating Blog Page</title>
         <link rel="stylesheet" href="./assets/css/blog-detail.css">
+        <link rel="stylesheet" href="./assets/css/nav.css">
     </head>
     <body>
         <nav>
