--- a/contact-form.html
+++ b/contact-form.html
@@ -2,6 +2,8 @@
     <head>
         <title>Day 2 - Form And Navbar</title>
         <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/nav.css">
+        <link rel="stylesheet" href="./assets/css/contact-form.css">
     </head>
     <body>
         <nav>
