--- a/contact-form.html
+++ b/contact-form.html
@@ -22,7 +22,7 @@
             <h1>GET IN TOUCH</h1>
             <form>
                 <div>
-                    <label for="name">Nama</label>
+                    <label for="name">Name</label>
                     <input id="name" type="text">
                 </div>
                 <div>
