--- a/contact-form.html
+++ b/contact-form.html
@@ -1,15 +1,20 @@
 <html>
     <head>
-        <title>Day 2 - Form And Navbar</title>
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <link rel="stylesheet" href="./assets/css/nav.css">
-        <link rel="stylesheet" href="./assets/css/contact-form.css">
+        <title>Day 5 - Count Post Blog Time</title>
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/nav.css" />
+        <link rel="stylesheet" href="./assets/css/contact-form.css" />
     </head>
     <body>
         <nav>
             <div class="nav-left">
                 <ul>
-                    <li><img src="./assets/images/brand.png" alt="Logo Dumbways"></li>
+                    <li>
+                        <img
+                            src="./assets/images/brand.png"
+                            alt="Logo Dumbways"
+                        />
+                    </li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Project</a></li>
                 </ul>
@@ -23,15 +28,15 @@
             <form>
                 <div>
                     <label for="name">Name</label>
-                    <input id="name" type="text">
+                    <input id="name" type="text" />
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input id="email" type="email">
+                    <input id="email" type="email" />
                 </div>
                 <div>
                     <label for="phone">Phone Number</label>
-                    <input id="phone" type="number">
+                    <input id="phone" type="number" />
                 </div>
                 <div>
                     <label for="subject">Subject</label>
