--- a/blog-detail.html
+++ b/blog-detail.html
@@ -1,14 +1,19 @@
 <html>
     <head>
         <title>Day 4 - Creating Blog Page</title>
-        <link rel="stylesheet" href="./assets/css/blog-detail.css">
-        <link rel="stylesheet" href="./assets/css/nav.css">
+        <link rel="stylesheet" href="./assets/css/blog-detail.css" />
+        <link rel="stylesheet" href="./assets/css/nav.css" />
     </head>
     <body>
         <nav>
             <div class="nav-left">
                 <ul>
-                    <li><img src="./assets/images/brand.png" alt="Logo Dumbways"></li>
+                    <li>
+                        <img
+                            src="./assets/images/brand.png"
+                            alt="Logo Dumbways"
+                        />
+                    </li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html" class="active">Project</a></li>
                 </ul>
@@ -23,17 +28,17 @@
             </div>
             <div class="head">
                 <div class="image">
-                    <img src="./assets/images/netflix.webp" alt="">
+                    <img src="./assets/images/netflix.webp" alt="" />
                 </div>
                 <div class="detail">
                     <div class="detail-item">
                         <h3>Duration</h3>
                         <div>
-                            <img src="./assets/icons/date.png" alt="">
+                            <img src="./assets/icons/date.png" alt="" />
                             <h5>10 Jan 2000 - 11 feb 2000</h5>
                         </div>
                         <div>
-                            <img src="./assets/icons/time.png" alt="">
+                            <img src="./assets/icons/time.png" alt="" />
                             <h5>2 month</h5>
                         </div>
                     </div>
@@ -41,19 +46,26 @@
                         <h3>Technologies</h3>
                         <div class="tag">
                             <div class="tag-tech">
-                                <img src="./assets/icons/nextjs.png" alt="">
+                                <img src="./assets/icons/nextjs.png" alt="" />
                                 <h4>NextJS</h4>
                             </div>
                             <div class="tag-tech">
-                                <img src="./assets/icons/nodejs.png" alt="">
+                                <img src="./assets/icons/nodejs.png" alt="" />
                                 <h4>NodeJS</h4>
                             </div>
                             <div class="tag-tech">
-                                <img src="./assets/icons/typescript.png" alt="">
+                                <img
+                                    src="./assets/icons/typescript.png"
+                                    alt=""
+                                />
                                 <h4>Typescript</h4>
                             </div>
                             <div class="tag-tech">
-                                <img src="./assets/icons/reactjs.png" alt="" style="width:28px;">
+                                <img
+                                    src="./assets/icons/reactjs.png"
+                                    alt=""
+                                    style="width: 28px"
+                                />
                                 <h4>ReactJS</h4>
                             </div>
                         </div>
@@ -61,7 +73,48 @@
                 </div>
             </div>
             <div class="content">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi iusto eum inventore sint cum vel, veniam quaerat itaque perferendis molestiae nostrum fuga quod unde temporibus dolores voluptate, molestias neque earum voluptas quam? Illum alias veritatis voluptates officia, officiis molestiae deserunt hic! Officia mollitia qui neque nostrum animi aperiam iste ut maxime! Excepturi aliquid quisquam enim a explicabo. Facilis, nemo voluptatem minima laudantium corporis culpa qui quasi aperiam, temporibus maiores velit! Atque laborum sunt optio eveniet commodi voluptates facere nihil praesentium numquam cum. Nulla aliquid quos vel esse optio reiciendis? Non deleniti temporibus officia, velit doloribus praesentium? Tempora officiis accusamus beatae dolor culpa quod numquam, modi aspernatur rerum quos iusto ipsa saepe ex, quibusdam enim libero aliquam, laudantium debitis earum quidem. Ex ipsum voluptates illum at velit aperiam nesciunt dolore amet! Quas tempore, excepturi in reprehenderit inventore iusto molestias ea assumenda doloremque, similique suscipit tenetur laborum blanditiis? Blanditiis accusamus suscipit soluta molestias labore sequi quas. Ab aspernatur architecto error sapiente distinctio facere dolores numquam ea deleniti, aliquam fuga quisquam, iste, unde exercitationem explicabo autem perferendis molestias nulla? Esse accusantium sed, error quaerat illum obcaecati ut asperiores culpa sequi quo minus deleniti. Fuga vero sed molestiae accusantium aliquid odit laudantium quam delectus, et, architecto officia veritatis cupiditate quaerat possimus nemo quia suscipit necessitatibus asperiores? Error necessitatibus corporis pariatur debitis incidunt, quas quis corrupti! Tempora earum saepe fugiat, ratione, voluptas, excepturi quod laboriosam beatae assumenda neque dolore provident numquam. Facilis atque eos laboriosam nostrum veniam rerum at, nihil ad corporis officia molestias ex fuga reiciendis sit sequi aliquam voluptates nemo explicabo! Obcaecati recusandae ipsa dolorum explicabo iure nemo autem debitis possimus praesentium quisquam quis, rem nisi, impedit ex. Deleniti aliquam officia est voluptatum qui in ipsam eveniet autem possimus veritatis molestias eos, fuga magnam! Ullam fugit nemo omnis repellendus saepe! Distinctio, ipsa consequuntur?</p>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Commodi iusto eum inventore sint cum vel, veniam quaerat
+                    itaque perferendis molestiae nostrum fuga quod unde
+                    temporibus dolores voluptate, molestias neque earum voluptas
+                    quam? Illum alias veritatis voluptates officia, officiis
+                    molestiae deserunt hic! Officia mollitia qui neque nostrum
+                    animi aperiam iste ut maxime! Excepturi aliquid quisquam
+                    enim a explicabo. Facilis, nemo voluptatem minima laudantium
+                    corporis culpa qui quasi aperiam, temporibus maiores velit!
+                    Atque laborum sunt optio eveniet commodi voluptates facere
+                    nihil praesentium numquam cum. Nulla aliquid quos vel esse
+                    optio reiciendis? Non deleniti temporibus officia, velit
+                    doloribus praesentium? Tempora officiis accusamus beatae
+                    dolor culpa quod numquam, modi aspernatur rerum quos iusto
+                    ipsa saepe ex, quibusdam enim libero aliquam, laudantium
+                    debitis earum quidem. Ex ipsum voluptates illum at velit
+                    aperiam nesciunt dolore amet! Quas tempore, excepturi in
+                    reprehenderit inventore iusto molestias ea assumenda
+                    doloremque, similique suscipit tenetur laborum blanditiis?
+                    Blanditiis accusamus suscipit soluta molestias labore sequi
+                    quas. Ab aspernatur architecto error sapiente distinctio
+                    facere dolores numquam ea deleniti, aliquam fuga quisquam,
+                    iste, unde exercitationem explicabo autem perferendis
+                    molestias nulla? Esse accusantium sed, error quaerat illum
+                    obcaecati ut asperiores culpa sequi quo minus deleniti. Fuga
+                    vero sed molestiae accusantium aliquid odit laudantium quam
+                    delectus, et, architecto officia veritatis cupiditate
+                    quaerat possimus nemo quia suscipit necessitatibus
+                    asperiores? Error necessitatibus corporis pariatur debitis
+                    incidunt, quas quis corrupti! Tempora earum saepe fugiat,
+                    ratione, voluptas, excepturi quod laboriosam beatae
+                    assumenda neque dolore provident numquam. Facilis atque eos
+                    laboriosam nostrum veniam rerum at, nihil ad corporis
+                    officia molestias ex fuga reiciendis sit sequi aliquam
+                    voluptates nemo explicabo! Obcaecati recusandae ipsa dolorum
+                    explicabo iure nemo autem debitis possimus praesentium
+                    quisquam quis, rem nisi, impedit ex. Deleniti aliquam
+                    officia est voluptatum qui in ipsam eveniet autem possimus
+                    veritatis molestias eos, fuga magnam! Ullam fugit nemo omnis
+                    repellendus saepe! Distinctio, ipsa consequuntur?
+                </p>
             </div>
         </div>
     </body>
