change script.js to contact-form.js

--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
                 </div>
             </div>
         </div>
-        <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/contact-form.js"></script>
     </body>
 </html>
