change script.js to contact-form.js

--- a/contact-form.html
+++ b/contact-form.html
@@ -56,6 +56,6 @@
                 </div>
             </form>
         </div>
-        <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/contact-form.js"></script>
     </body>
 </html>
