--- a/contact-form.html
+++ b/contact-form.html
@@ -1,13 +1,18 @@
 <html>
     <head>
         <title>Day 3 - Form Submission</title>
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <nav>
             <div class="nav-left">
                 <ul>
-                    <li><img src="./assets/images/brand.png" alt="Logo Dumbways"></li>
+                    <li>
+                        <img
+                            src="./assets/images/brand.png"
+                            alt="Logo Dumbways"
+                        />
+                    </li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="">Project</a></li>
                 </ul>
@@ -21,15 +26,15 @@
             <form>
                 <div>
                     <label for="name">Nama</label>
-                    <input id="name" type="text">
+                    <input id="name" type="text" />
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input id="email" type="email">
+                    <input id="email" type="email" />
                 </div>
                 <div>
                     <label for="phone">Phone Number</label>
-                    <input id="phone" type="number">
+                    <input id="phone" type="number" />
                 </div>
                 <div>
                     <label for="subject">Subject</label>
@@ -49,6 +54,6 @@
                 </div>
             </form>
         </div>
-        <script src="./assets/js/script.js"></script>
+        <script src="./assets/js/contact-form.js"></script>
     </body>
 </html>
