--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <html>
     <head>
         <title>Day 3 -Form Submission</title>
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
     </head>
     <body>
         <nav>
             <div class="nav-left">
                 <ul>
-                    <li><img class="brand" src="./assets/images/brand.png" alt=""></li>
+                    <li>
+                        <img
+                            class="brand"
+                            src="./assets/images/brand.png"
+                            alt=""
+                        />
+                    </li>
                     <li><a href="" class="active">Home</a></li>
                     <li><a href="">Project</a></li>
                 </ul>
@@ -20,14 +32,23 @@
         <div class="card">
             <div class="card-content">
                 <h1>Hi Welcome to my hut</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                    do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit
+                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                    occaecat cupidatat non proident, sunt in culpa qui officia
+                    deserunt mollit anim id est laborum.
+                </p>
                 <div class="downloads">
                     <button>
                         <a class="contact" href="https://google.com">contact</a>
                     </button>
                     <div class="download">
-                        <a href="https://google.com" style="text-decoration: none; color: black;">
-                            <span>download CV<i class="fa-solid fa-download" style="padding-left: 10px;"></i></span>
+                        <a href="https://google.com" style="text-decoration: none; color: black">
+                            <span>download CV<i class="fa-solid fa-download" style="padding-left: 10px"></i></span>
                         </a>
                     </div>
                 </div>
@@ -47,7 +68,11 @@
                 </div>
             </div>
             <div class="card-profile">
-                <img style="width: 100%;" src="./assets/images/profile.jpg" alt=""/>
+                <img
+                    style="width: 100%"
+                    src="./assets/images/profile.jpg"
+                    alt=""
+                />
                 <div class="card-profile-content">
                     <h2>Rahman Muhaemin</h2>
                     <p>Fullstack Developer</p>
