--- a/contact-form.html
+++ b/contact-form.html
@@ -1,13 +1,13 @@
 <html>
     <head>
         <title>Day 2 - Form And Navbar</title>
-        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css" />
     </head>
     <body>
         <nav>
             <div class="nav-left">
                 <ul>
-                    <li><img src="./assets/images/brand.png" alt=""></li>
+                    <li><img src="./assets/images/brand.png" alt="" /></li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="">Project</a></li>
                 </ul>
@@ -21,15 +21,15 @@
             <form>
                 <div>
                     <label for="name">Nama</label>
-                    <input type="text" id="name">
+                    <input type="text" id="name" />
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input type="email" id="email">
+                    <input type="email" id="email" />
                 </div>
                 <div>
                     <label for="phone">Phone Number</label>
-                    <input type="number" id="phone">
+                    <input type="number" id="phone" />
                 </div>
                 <div>
                     <label for="subject">Subject</label>
