--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="./assets/css/blog.css" />
         <link rel="stylesheet" href="./assets/css/icons.css" />
         <link rel="stylesheet" href="./assets/css/nav.css" />
+        <link rel="stylesheet" href="./assets/css/hover.css" />
     </head>
     <body>
         <nav>
