--- a/contact-form.html
+++ b/contact-form.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="./assets/css/style.css" />
         <link rel="stylesheet" href="./assets/css/nav.css" />
         <link rel="stylesheet" href="./assets/css/contact-form.css" />
+        <link rel="stylesheet" href="./assets/css/hover.css" />
     </head>
     <body>
         <nav>
