--- a/blog-detail.html
+++ b/blog-detail.html
@@ -1,18 +1,33 @@
 <html>
     <head>
-        <title>Day 5 - Count Post Blog Time</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Day 6 - Responsive CSS</title>
         <link rel="stylesheet" href="./assets/css/blog-detail.css" />
         <link rel="stylesheet" href="./assets/css/nav.css" />
+        <link rel="stylesheet" href="./assets/css/media-query-blog-detail.css" />
+        <link rel="stylesheet" href="./assets/css/list-menu-mobile.css"/>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+            integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
     </head>
     <body>
         <nav>
             <div class="nav-left">
                 <ul>
                     <li>
-                        <img
-                            src="./assets/images/brand.png"
-                            alt="Logo Dumbways"
-                        />
+                        <a href="/">
+                            <img
+                                class="brand"
+                                src="./assets/images/brand.png"
+                                alt=""
+                            />
+                        </a>
                     </li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html" class="active">Project</a></li>
@@ -21,7 +36,28 @@
             <div class="nav-right">
                 <a href="contact-form.html">Contact me</a>
             </div>
+            <div class="navbar-mobile" style="display: none;">
+                <div class="logo">
+                    <a href="/">
+                        <img
+                            class="brand"
+                            src="./assets/images/brand.png"
+                            alt=""
+                        />
+                    </a>
+                </div>
+                <div class="btn-menu">
+                    <button onclick="showMenu()" id="show-button"><i class="fa-2x fa-solid fa-bars"></i></button>
+                </div>
+            </div>
         </nav>
+        <div class="list-menu-mobile" id="list-menu-mobile" style="display: none;">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="blog.html">My Project</a></li>
+                <li class="contact-me-btn"><a href="contact-form.html">Contact Me</a></li>
+            </ul>
+        </div>
         <div class="container">
             <div class="title">
                 <h1>Netflix Clone 2023</h1>
@@ -117,5 +153,6 @@
                 </p>
             </div>
         </div>
+        <script src="./assets/js/menu.js"></script>
     </body>
 </html>
