--- a/testimonials.html
+++ b/testimonials.html
@@ -70,7 +70,7 @@
             </ul>
         </div>
         <div class="container-testimonials">
-            <h1>Testimonials</h1>
+            <h1>My Testimonials</h1>
             <div class="testimonials" id="testimonials">
                 <!-- <div class="testi-card">
                     <div class="image">
