--- a/contact-form.html
+++ b/contact-form.html
@@ -33,6 +33,7 @@
                     </li>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html">Project</a></li>
+                    <li><a href="testimonials.html">Testimonials</a></li>
                 </ul>
             </div>
             <div class="nav-right">
