--- a/testimonials.html
+++ b/testimonials.html
@@ -38,7 +38,7 @@
                     <li><a href="blog.html">Project</a></li>
                     <li>
                         <a href="testimonials.html" class="active"
-                            >Testimonials</a
+                            >My Testimonials</a
                         >
                     </li>
                 </ul>
