--- a/testimonials.html
+++ b/testimonials.html
@@ -80,7 +80,7 @@
             </ul>
         </div>
         <div class="container-testimonials">
-            <h1>Testimonials</h1>
+            <h1>My Testimonials</h1>
             <div class="rating-filter">
                 <button onclick="getTestimonialData()">
                     All<i class="fa-solid fa-star"></i>
