--- a/testimonials.html
+++ b/testimonials.html
@@ -38,7 +38,7 @@
                     <li><a href="blog.html">Project</a></li>
                     <li>
                         <a href="testimonials.html" class="active"
-                            >My Testimonials</a
+                            >Testimonials</a
                         >
                     </li>
                 </ul>
@@ -80,7 +80,7 @@
             </ul>
         </div>
         <div class="container-testimonials">
-            <h1>Testimonials</h1>
+            <h1>My Testimonials</h1>
             <div class="rating-filter">
                 <button onclick="showTestimonials()">
                     All<i class="fa-solid fa-star"></i>
